EPBDS-14689 Drop ACL for Deploy Configuration as Deploy Configuration will be removed from OpenL Studio soon